[gd_scene load_steps=7 format=3 uid="uid://b26i8kffy01nw"]

[ext_resource type="Script" path="res://types/buildings/conveyor/modules/conveyor_module.gd" id="1_j14fw"]
[ext_resource type="Script" path="res://types/building/building.gd" id="2_x1xpi"]
[ext_resource type="Script" path="res://types/buildings/conveyor/modules/conveyor_module_item_adapter.gd" id="3_41qa6"]
[ext_resource type="Texture2D" uid="uid://bdpoolp50c86t" path="res://assets/adapter_units/build_unit.png" id="4_h6yip"]
[ext_resource type="Script" path="res://types/editor/editor_sprite.gd" id="5_t6pxm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1s5ro"]
atlas = ExtResource("4_h6yip")
region = Rect2(40, 8, 16, 16)

[node name="ConveyorModule" type="Node2D"]
script = ExtResource("1_j14fw")
sides = 9

[node name="Building" type="Node" parent="." node_paths=PackedStringArray("shadow_container", "main_node")]
script = ExtResource("2_x1xpi")
shadow_container = NodePath("..")
callback_get_adapter_at = &"get_adapter_at"
callback_get_component_at = &"get_component_at"
callback_handle_break = &"handle_break"
main_node = NodePath("..")
adapters = {
"item": NodePath("../ItemAdapter")
}
layer_follow_world = true
layer = 1

[node name="ItemAdapter" type="Node" parent="." node_paths=PackedStringArray("main_node", "entity_node")]
script = ExtResource("3_41qa6")
main_node = NodePath("..")
entity_node = NodePath("../Building")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_1s5ro")
script = ExtResource("5_t6pxm")

[connection signal="on_load_data" from="Building" to="." method="_on_building_on_load_data"]
[connection signal="on_save_data" from="Building" to="." method="_on_building_on_save_data"]
